# bldc

./: .clang-format  .clang-tidy  .clangd  .cproject  .directory  .gdbinit  .gitignore  .gitmodules  .project  .travis.yml  BLDC_4_ChibiOS.ebp  CHANGELOG  CHANGELOG.md  CODEOWNERS  CONTRIBUTING  CONTRIBUTING.md  I_hope_you_can_contact_me.txt  Makefile  Makefile.bak  README.md  STM32F407G-DISC1.xml  TESTING.md  bms.c  bms.h  buffer.c  buffer.h  build_commands.txt  build_comms_script.py  buzzer.c  buzzer.h  chconf.h  comm.c  comm.h  comm_can.c  comm_can.h  comm_usb.c  comm_usb.h  comm_usb_serial.c  comm_usb_serial.h  commands.c  (+105 more)
.metadata/: version.ini
ChibiOS_2.6.6/: readme.txt
ChibiOS_3.0.2/: readme.txt
ChibiOS_3.0.5/: readme.txt  release_note_3.0.0.txt
appconf/: appconf_VPT.h  appconf_custom.h  appconf_default.h  appconf_example_ppm.h
applications/: app.c  app.h  app_adc.c  app_adc_old.c  app_balance.c  app_custom.c  app_custom_template.c  app_dpv.c  app_gurgalof.c  app_io.c  app_nunchuk.c  app_pas.c  app_play_tune.c  app_ppm.c  app_ppm_adc_brake.c  app_ppm_brake.c  app_rccar.c  app_skypuff.c  app_smv.c  app_sten.c  app_test.c  app_tmm.c  app_uartcomm.c  appconf_default.h  applications.mk  cixi_comm_can.c  cixi_comm_can.h  current_brake_center_reverse_button.c
apps/: apps.mk
benchmarks/: dec_cnt3.lisp  loop_200k.lisp  plot_bench.py  run_benchmarks_stm32  sort500.lisp
blackbox/: SEGGER_RTT.c  SEGGER_RTT.h  SEGGER_RTT_Conf.h  SEGGER_RTT_ConfDefaults.h  SEGGER_RTT_printf.c  blackbox.c  blackbox.h  blackbox.mk
blackmagic/: README.md  blackmagic.mk  bm_if.c  bm_if.h  exception.c  general.h  platform.c  platform.h  swdptap.h  target.h
build_all/: README.md  before_deploy.sh  rebuild_all  rebuild_palta
ci/: before_deploy.sh
comm/: comm.mk  comm_can.c  comm_can.h  comm_usb.c  comm_usb.h  comm_usb_serial.h  commands.c  commands.h  log.c  log.h  packet.c
compression/: compression.mk
doc/: Makefile  README.md  cryptref.lisp  displayref.lisp  displayref.md  doclib.lisp  dspref.md  dynref.lisp  dynref.md  goals.lisp  gotchas.md  lbm.dox  lbmref.dox  lbmref.lisp  lbmref.md  mathref.lisp  mutexref.lisp  patternref.lisp  randomref.lisp  runtimeref.lisp  runtimeref.md  setref.lisp  setref.md  strange.lisp  stringref.lisp  stringref.md  ttfref.lisp  ttfref.md
docs/: footer.html  mainpage.md
documentation/: comm_can.md
driver/: driver.mk  eeprom.c  eeprom.h  i2c_bb.c  i2c_bb.h  ledpwm.c  ledpwm.h  pwm_servo.c  pwm_servo.h  servo_dec.c  servo_dec.h  servo_simple.c  servo_simple.h  spi_bb.c  spi_bb.h  timer.c  timer.h
drivers/: drivers.mk  nunchuk.cpp  nunchuk.h  ws2812.cpp  ws2812.h
encoder/: ABI.c  ABI.h  AD2S1205.c  AD2S1205.h  AS504x.c  AS504x.h  ENC_SINCOS.c  ENC_SINCOS.h  MT6816.c  MT6816.h  TS5700N8501.c  TS5700N8501.h  enc_abi.c  enc_abi.h  enc_ad2s1205.c  enc_ad2s1205.h  enc_amt22.c  enc_amt22.h  enc_as504x.c  enc_as504x.h  enc_as5x47u.c  enc_as5x47u.h  enc_bissc.c  enc_bissc.h  enc_ma782.c  enc_ma782.h  enc_mt6816.c  enc_mt6816.h  enc_mt6835.c  enc_mt6835.h  enc_pwm.c  enc_pwm.h  enc_sincos.c  enc_sincos.h  enc_tle5012.c  enc_tle5012.h  enc_ts5700n8501.c  enc_ts5700n8501.h  encoder.c  encoder.h  (+8 more)
examples/: Makefile  evaluator.c  profile.sh
experiment_repl/: Makefile  repl.c  test_yield.lisp
hwconf/: SX1278.c  SX1278_hw.c  board.c  board.h  drv8301.c  drv8301.h  drv8305.c  drv8305.h  drv8316.c  drv8316.h  drv8320.c  drv8320.h  drv8320s.c  drv8320s.h  drv8323s.c  drv8323s.h  hw.c  hw.h  hw_100_250.c  hw_100_250.h  hw_100_500.h  hw_140_300.c  hw_140_300.h  hw_40.c  hw_40.h  hw_410.c  hw_410.h  hw_45.c  hw_45.h  hw_46.c  hw_46.h  hw_48.c  hw_48.h  hw_49.c  hw_49.h  hw_60.c  hw_60.h  hw_60_75.c  hw_60_75.h  hw_60_mk3.h  (+96 more)
imu/: ahrs.c  ahrs.h  bmi160_wrapper.c  bmi160_wrapper.h  device.h  drdy.c  drdy.h  icm20948.c  icm20948.h  imu.c  imu.h  imu.mk  imu_config.h  imu_thread.c  imu_thread.h  lsm6ds3.c  lsm6ds3.h  lsm6dsv32x.c  lsm6dsv32x.h  mpu9150.c  mpu9150.h  transport.h  transport_i2c_bb.c  transport_i2c_bb.h  transport_spi_bb.c  transport_spi_bb.h  transport_spi_hw.c  transport_spi_hw.h
include/: compression.h  env.h  eval_cps.h  exp_kind.h  extensions.h  fundamental.h  heap.h  heap_vis.h  lbm_c_interop.h  lbm_channel.h  lbm_cos_table.h  lbm_custom_type.h  lbm_defines.h  lbm_defrag_mem.h  lbm_flags.h  lbm_flat_value.h  lbm_llama_ascii.h  lbm_memory.h  lbm_prof.h  lbm_types.h  lbm_utils.h  lbm_variables.h  lbm_version.h  lispbm.h  lispbm_types.h  prelude.h  print.h  stack.h  streams.h  symrepr.h  tokpar.h
libcanard/: README.md  canard.c  canard.h  canard.mk  canard_driver.c  canard_driver.h  canard_internals.h
linter/: lint.sh
lispBM/: README.md  chtime.h  lbm_vesc_utils.c  lbm_vesc_utils.h  lispbm.mk  lispif.c  lispif.h  lispif_c_lib.c  lispif_vesc_dynamic_loader.c  lispif_vesc_extensions.c
lispBM/lispBM/esp-examples/repl/main/: CMakeLists.txt  main.c
lispBM/lispBM/examples/esp32c3/main/: CMakeLists.txt  main.c
lispBM/lispBM/old/repl-esp-idf/main/: CMakeLists.txt
log/: 2020-10-02_21-53-57.csv
lora/: SX1278.c  SX1278_hw.c  lora.c  lora.h  lora.mk  rfm95w.c
lzo/: lzo.mk
make/: fw.mk  linux.mk  macos.mk  system-id.mk  tools.mk  unittest-defs.mk  unittest.mk  windows.mk
math/: optimized_helper_functions.h  optimized_trig.h
nrf/: nrf.mk  (+8 more)
tests/qc/: sexp-gen.cabal
tests/qc/src/: Oracles.hs  SExpGen.hs
(+5556 files in other folders)
