idf_component_register(SRCS "main.c" 
                            "../../../src/heap.c"
                            "../../../src/env.c"
                            "../../../src/eval_cps.c"
                            "../../../src/extensions.c"
                            "../../../src/fundamental.c"
                            "../../../src/symrepr.c"
                            "../../../src/lispbm.c"
                            "../../../src/lbm_memory.c"
                            "../../../src/lbm_variables.c"
                            "../../../src/lbm_c_interop.c"
                            "../../../src/lbm_custom_type.c"
                            "../../../src/print.c"
                            "../../../src/qq_expand.c"
                            "../../../src/stack.c"
                            "../../../src/tokpar.c"
                            "../../../src/lbm_channel.c"
                            "../../../platform/freertos/src/platform_mutex.c"
                            "../../../src/extensions/array_extensions.c"
                            "../../../src/extensions/math_extensions.c"
                            "../../../src/extensions/string_extensions.c"
                       INCLUDE_DIRS "" 
                                    "../../../include"
                                    "../../../platform/freertos/include")
