idf_component_register(SRCS "main.c"
                            "../../../src/env.c"             
                            "../../../src/eval_cps.c"
                            "../../../src/extensions.c"
                            "../../../src/fundamental.c"
                            "../../../src/heap.c"
                            "../../../src/lbm_memory.c"
                            "../../../src/print.c"
                            "../../../src/stack.c"
                            "../../../src/symrepr.c"
                            "../../../src/tokpar.c"
                            "../../../src/lispbm.c"
                            "../../../src/lbm_c_interop.c"
                            "../../../src/lbm_custom_type.c"
                            "../../../src/lbm_channel.c"
                            "../../../src/lbm_flat_value.c"
                            "../../../src/lbm_defrag_mem.c"
                            "../../../src/lbm_image.c"
                            "../../../platform/freertos/src/platform_mutex.c"
                            "../../../platform/freertos/src/platform_timestamp.c"
                       PRIV_REQUIRES spi_flash esp_partition esp_driver_uart
                       INCLUDE_DIRS "../../../include"
                                    "../../../platform/freertos/include"
                       )
